--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: "Daily check and update"
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 12 * * *"
   workflow_dispatch:
 
 jobs:
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout master
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.10.11
+          python-version: 3.9
 
       - name: Install requirements
         run: |
@@ -32,9 +32,9 @@ jobs:
           npx prettier README.md --write --parser html
       - name: Commit and push if changed
         run: |
-          git diff
           git config user.name "Yuri-Neko"
           git config user.email "fjrcyber@gmail.com"
-          git add .
-          git commit -asm "Kyouka Hoyovers Game stats"
+          git diff
+          git add README.md
+          git commit -m "Kiizuha's Genshin Impact stats"
           git push
